--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
-    "react-native-share": "^8.2.0"
+    "react-native-share": "^8.2.0",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
