--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.10",
     "expo": "~48.0.6",
-    "expo-sharing": "~11.0.1",
+    "expo-sharing": "~11.2.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-share": "^8.2.0",
     "react-native-svg": "^13.4.0",
-    "react-native-svg-transformer": "^1.0.0"
+    "react-native-svg-transformer": "^1.0.0",
+    "expo-modules-core": "~1.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
