--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-share": "^8.2.0",
     "react-native-svg": "^13.4.0",
-    "react-native-svg-transformer": "^1.0.0"
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-maps": "1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
