Added Dark Mode Support

--- a/app.json
+++ b/app.json
@@ -9,8 +9,12 @@
       "sourceExts": ["js", "jsx", "svg", "ts", "tsx"]
     },
     "assetBundlePatterns": ["**/*"],
+    "android": {
+      "userInterfaceStyle": "automatic"
+    },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "userInterfaceStyle": "automatic"
     }
   }
 }
