--- a/package.json
+++ b/package.json
@@ -15,18 +15,22 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.10",
     "expo": "~48.0.6",
+    "expo-modules-core": "~1.2.5",
     "expo-sharing": "~11.2.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-animatable": "^1.3.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-paper": "^5.5.0",
     "react-native-share": "^8.2.0",
     "react-native-svg": "^13.4.0",
     "react-native-svg-transformer": "^1.0.0",
-    "expo-modules-core": "~1.2.5"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
