--- a/package.json
+++ b/package.json
@@ -22,14 +22,16 @@
     "expo-modules-core": "~1.2.6",
     "expo-sharing": "~11.2.2",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.18.0",
     "react": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-native": "0.71.4",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-maps": "1.3.2",
     "react-native-paper": "^5.5.0",
     "react-native-share": "^8.2.0",
     "react-native-svg": "^13.4.0",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-maps": "1.3.2",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
