--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.10",
+    "@reduxjs/toolkit": "^1.9.3",
     "expo": "~48.0.6",
     "expo-modules-core": "~1.2.6",
     "expo-sharing": "~11.2.2",
@@ -25,12 +26,14 @@
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-maps": "1.3.2",
     "react-native-paper": "^5.5.0",
     "react-native-share": "^8.2.0",
     "react-native-svg": "^13.4.0",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-maps": "1.3.2",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
