--- a/app.json
+++ b/app.json
@@ -15,6 +15,16 @@
     "ios": {
       "supportsTablet": true,
       "userInterfaceStyle": "automatic"
-    }
+    },
+    "plugins": [
+      [
+        "@config-plugins/react-native-ble-plx",
+        {
+          "isBackgroundEnabled": true,
+          "modes": ["peripheral", "central"],
+          "bluetoothAlwaysPermission": "Allow $(PRODUCT_NAME) to connect to bluetooth devices"
+        }
+      ]
+    ]
   }
 }
