--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/react-native-ble-plx": "^6.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
@@ -24,12 +25,13 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-ble-plx": "^2.0.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-maps": "1.3.2",
     "react-native-paper": "^5.5.0",
     "react-native-share": "^8.2.0",
     "react-native-svg": "^13.4.0",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-maps": "1.3.2",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
