--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "tbb_app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@config-plugins/react-native-ble-plx": "^6.0.0",
+    "@config-plugins/react-native-ble-plx": "^3.0.0",
+    "@expo/metro-config": "^0.1.48",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
@@ -19,19 +19,22 @@
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.10",
-    "expo": "~48.0.6",
+    "expo": "~46.0.21",
+    "expo-dev-client": "~2.2.1",
+    "expo-device": "~5.2.1",
     "expo-modules-core": "~1.2.6",
     "expo-sharing": "~11.2.2",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.4",
+    "expo-system-ui": "~2.2.1",
+    "react": "18.0.0",
+    "react-native": "0.69.9",
     "react-native-ble-plx": "^2.0.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-maps": "1.3.2",
     "react-native-paper": "^5.5.0",
     "react-native-share": "^8.2.0",
     "react-native-svg": "^13.4.0",
-    "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
