--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,11 @@ buildscript {
         compileSdkVersion = 33
         targetSdkVersion = 33
 
+        // These are for Google Maps
+        supportLibVersion = "28.0.0"        
+        googlePlayServicesVersion = "11.8.0"
+        androidMapsUtilsVersion = "0.5+"    
+
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
     }
