--- a/ios/tbb_app/Info.plist
+++ b/ios/tbb_app/Info.plist
@@ -51,5 +51,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+  <key>NSBluetoothAlwaysUsageDescription</key>
+  <string>App requires Bluetooth to connect to device</string>
+  <key>NSBluetoothPeripheralUsageDescription</key>
+  <string>App requires Bluetooth to connect to device</string>
 </dict>
 </plist>
