--- a/ios/Podfile
+++ b/ios/Podfile
@@ -24,6 +24,9 @@ end
 target 'tbb_app' do
   config = use_native_modules!
 
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  pod 'Permission-BluetoothPeripheral', :path => "#{permissions_path}/BluetoothPeripheral"
+
   # Flags change depending on the env values.
   flags = get_default_flags()
 
