--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-native": "^0.71.7",
     "react-native-ble-plx": "^2.0.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-device-info": "^10.6.0",
     "react-native-gradle-plugin": "^0.71.17",
     "react-native-maps": "^1.7.1",
+    "react-native-permissions": "^3.8.0",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0"
