--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,5 +2,7 @@
   "compilerOptions": {
     "jsx": "react"
   },
-  "extends": "@tsconfig/react-native/tsconfig.json"
+  "extends": "@tsconfig/react-native/tsconfig.json",
+  "allowSyntheticDefaultImports": true,
+  "esModuleInterop": true
 }
