--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "react": "^18.2.0",
     "react-native": "^0.71.7",
+    "react-native-base64": "^0.2.1",
     "react-native-ble-plx": "^2.0.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-device-info": "^10.6.0",
