--- a/package.json
+++ b/package.json
@@ -19,21 +19,20 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.10",
     "@reduxjs/toolkit": "^1.9.3",
-    "expo": "~48.0.6",
-    "expo-modules-core": "~1.2.6",
-    "expo-sharing": "~11.2.2",
-    "expo-status-bar": "~1.4.4",
     "firebase": "^9.18.0",
     "react": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-native": "0.71.4",
+    "react-native-base64": "^0.2.1",
+    "react-native-ble-plx": "^2.0.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-device-info": "^10.6.0",
+    "react-native-gradle-plugin": "^0.71.17",
     "react-native-maps": "1.3.2",
-    "react-native-paper": "^5.5.0",
-    "react-native-share": "^8.2.0",
-    "react-native-svg": "^13.4.0",
-    "react-native-svg-transformer": "^1.0.0",
-    "react-native-vector-icons": "^9.2.0",
+    "react-native-permissions": "^3.8.0",
+    "react-native-safe-area-context": "^4.5.1",
+    "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.9.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1"
   },
