--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
